--- a/SkyBox/index.html
+++ b/SkyBox/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" type="text/css" href="style.css" />
 <script src="https://cdn.jsdelivr.net/npm/three@0.119.1/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.119.1/examples/js/controls/OrbitControls.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-<!-- <script src="orbit.js"></script> -->
 
   <head>
     <meta charset="utf-8">
-    <title>This that 3demensional type jawn</title>
+    <title>SkyBox</title>
   </head>
   <body>
   </body>
@@ -60,8 +60,5 @@
 
 
         </script>
-
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <!-- <script src="app.js"></script> -->
 
 </html>
